--- a/front/src/components/Header/Header.css
+++ b/front/src/components/Header/Header.css
@@ -1,17 +1,13 @@
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px 8px 12px;
-  height: 60px;
+  margin: 0 auto;
+  max-width: 1100px;
   width: 100%;
-  background-color: rgba(0, 113, 136, 1);
-  color: white;
 
+  &__link{
 
+  }
     &__title {
     font-family: Arial, Tahoma, sans-serif;
-    text-align: center;
     font-weight: bold;
     font-size: 2em;
     text-decoration: none;
