--- a/front/src/assets/styles/main.css
+++ b/front/src/assets/styles/main.css
@@ -6,11 +6,12 @@
     box-sizing: border-box;
     position: relative;
 }
- .body{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen';
-  -webkit-font-smoothing: antialiased;
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont,  'Roboto',  sans-serif;
+    -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 16px;
     color: var(--main-text);
     background-color: var(--body-bg);
- }
+}
