--- a/front/src/assets/styles/colors.css
+++ b/front/src/assets/styles/colors.css
@@ -1,10 +1,10 @@
 :root{
   --color-white: #fff;
-    --color-e0: #e0e0e0;
-    --color-c2: #c2c2c2;
-    --color-4c: #4c4c4c;
-    --color-2c: #2c2c2c;
+    --color-e0: #2B2E4A;
+    --color-c2: #E84545;
+    --color-4c: #A6E3E9;
+    --color-2c: #71C9CE;
     --color-2c-transparent: rgba(44, 44, 44, 0.3);
     --color-1f: #1f1f1f;
-    --color-red: #c41e1e;
+    --color-red: #E84545;
 }
